Fix FCC image link in <header>

--- a/fcc_tribute_page/index.html
+++ b/fcc_tribute_page/index.html
@@ -11,7 +11,7 @@
 <body>
     <main id="main">
         
-         <header id="title" style="--image-url: url(file:///C:/Users/smorr/Desktop/freeCodeCampWebDesign/tributePage/resources/David_Attenborough_with_Chimps.jpg)" alt="David Attenborough lying on the forest floor playing with chimpanzees">
+         <header id="title" style="--image-url: url(https://samorrissey.github.io/fcc_tribute_page/resources/David_Attenborough_with_Chimps.jpg)" alt="David Attenborough lying on the forest floor playing with chimpanzees">
             <h1>Sir David Attenborough</h1>
           </header>
 
