Edits to FCC Tribute page HTML and CSS files

--- a/fcc_tribute_page/index.html
+++ b/fcc_tribute_page/index.html
@@ -26,7 +26,7 @@
         <section id="tribute-info">
             <h2 class="tribute-headline">A Naturalist and Pioneer</h2>
             <p>Sir David Attenborough continues inspired millions by bringing nature into our homes. His dedication to exploration, curiousity, innovation, and a drive to enlighten has shaped our lives and understanding of the natural world. He has changed our connection to the natural world but also how we are able to view the natural world.</p>
-            <h3 class="tribute-headline">Highlights David Attenborough's Career</h3>
+            <h3 class="tribute-headline">David Attenborough's Career Highlights</h3>
             <ul>
                 <li><strong>1926</strong> - Born in London, England</li>
                 <li><strong>1936</strong> - Attended a lecture by Grey Owl (Archibald Belaney) at De Montfold Hall, Leicaster. Attenborough was highly influenced by Grey Owl's advocacy of conservation.</li>
