Updated <!--Video Section--> html and simplified the video css

--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -87,24 +87,24 @@
           </div>
       </div>
 
-              
-         <!--Video Section-->
-         <h2 id="video-section">Winter Traditions Start Here</h2>
-         <section class="video-container">
-            <div class="video1">
-                <iframe id="video"  src="https://www.youtube.com/embed/SuKn-acPvVk" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-                encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-              </div>
-            <div class="video2">
-                <iframe id="video2"  src="https://www.youtube.com/embed/6m7PW7FS3cE" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; 
-                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-            </div>
+      <!--Video Section--> 
+      <section class="video-style">
+        <h2 id="video-section">Winter Traditions Start Here</h2>
+        <section class ="video-grid">
+          <div>
+            <iframe id="video"  src="https://www.youtube.com/embed/SuKn-acPvVk" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+          </div>
+        <div>
+            <iframe id="video2"  src="https://www.youtube.com/embed/6m7PW7FS3cE" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; 
+            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+        </div>
         </section>
-        
+      </section>
 
         <!--Footer Section-->
 
