Added item to <nav> bar, added styling to /*Footer*/

--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -19,6 +19,7 @@
                     <li class="list-item"><a class="nav-link" href="#whats-new">What's New</a></li>
                     <li class="list-item"><a class="nav-link" href="#product-section">Products</a></li>
                     <li class="list-item"><a class="nav-link" href="#video-section">Videos</a></li>
+                    <li class="list-item"><a class="nav-link" href="#footer">Register</a></li>
                 </ul>
             </nav>
         </header>
@@ -113,7 +114,7 @@
             <p>Offers, events, and cool new gear</p>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
               <input name="email" id="email" type="email" placeholder="Enter your email address" required />
-              <input id="submit" type="submit" value="Sign me up!" class="btn" />
+              <input id="submit" type="submit" value="Sign me up!" class="footer-btn" />
             </form>
         </footer>
         
