--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -31,7 +31,8 @@
                 <button class="masthead-button">Shop Sale Items</button>
             </span>
         </section>
-        
+
+    <!--Grid styling for Product Section and Video Section from Chris Coyier (A Grid of Squares)-->   
     <!--Product Section-->
         <div id="product-section" class="product-grid">
           <!--Product 1-->
