--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge"> 
 <title>Northstar Skis</title>
     <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson Text" rel="stylesheet">
