--- a/fcc_technical_documentation_page/index.html
+++ b/fcc_technical_documentation_page/index.html
@@ -6,11 +6,109 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
 <title>JavaScript Technical Documentation</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body> 
-    <main id="main-doc">
+    <nav id="navbar">
+        <header>JavaScript Documentation</header>
+        <ul>
+            <li><a class="nav-link" href="#introduction">Introduction</a></li>
+            <li><a class="nav-link" href="#data-types">Data Types</a></li>
+            <li><a class="nav-link" href="#variables">Variables</a></li>
+            <li><a class="nav-link" href="#functions">Functions</a></li>
+        </ul>
 
+        <select>
+            <option value="" selected="selected">Select a Topic</option>
+                <option value="#introduction">Introuction</option>
+                <option value="#data-types">Data Types</option>
+                <option value="#variables">Variables</option>
+                <option value="#functions">Functions</option>
+        </select>
+
+       </nav>
+    <main id="main-doc">
+        <section id="introduction" class="main-section">
+            <header>JavaScript Introduction</header>
+                <span>
+                    <p>Lorem ipsum</p>
+                </span>
+        </section>
+
+        <section id="data-types" class="main-section">
+            <header>Data Types</header>
+                <span>
+                    <p>Lorem ipsum</p>
+                    <li>Type</li>
+                    <li>Type</li>
+                    <li>Type</li>
+                    <li>Type</li>
+                    <li>Type</li>
+                    <li>Type</li>
+                    <li>Type</li>
+                </span>
+        </section>
+
+        <section id="variables" class="main-section">
+            <header>Variables</header>
+                <span>
+                    <p>Lorem ipsum</p>
+                    <code>let myName = "Sara";</code>
+                </span>
+        </section>
+
+        <section id="introduction" class="main-section">
+            <header>JavaScript Introduction</header>
+                <span>
+                    <p>Lorem ipsum</p>
+                </span>
+        </section>
+
+        <section id="introduction" class="main-section">
+            <header>JavaScript Introduction</header>
+                <span>
+                    <p>Lorem ipsum</p>
+                </span>
+        </section>
+        <section id="functions" class="main-section">
+            <header>Functions</header>
+                <span>
+                    <p>Lorem ipsum</p>
+                    <code>
+                        function greetWorld() {
+                            console.log('Hello, World!'); 
+                        }
+                    greetWorld();//Output: Hello, World!
+                </code>
+                </span>
+        </section>
     </main>
 </body>
 </html>
+
+<!--User Stories-->
+
+
+User Story #4: Each section element with the class of main-section 
+should also have an id that corresponds with the text of each header contained within it. 
+Any spaces should be replaced with underscores 
+(e.g. The section that contains the header "JavaScript and Java" 
+should have a corresponding id="JavaScript_and_Java").
+
+User Story #5: The .main-section elements should contain at least 10 p elements total (not each).
+
+User Story #6: The .main-section elements should contain at least 5 code elements total (not each).
+
+User Story #7: The .main-section elements should contain at least 5 li items total (not each).
+
+User Story #10: Additionally, the navbar should contain link (a) 
+elements with the class of nav-link. There should be one for 
+every element with the class main-section.
+
+
+User Story #14: On regular sized devices (laptops, desktops), 
+the element with id="navbar" should be shown on the left side of the 
+screen and should always be visible to the user.
+
+User Story #15: My Technical Documentation page should use at least one media query.
