added styling to #navbar, #main-doc, and @media

--- a/fcc_technical_documentation_page/index.html
+++ b/fcc_technical_documentation_page/index.html
@@ -13,10 +13,10 @@
     <nav id="navbar">
         <header>JavaScript Documentation</header>
         <ul>
-            <li><a class="nav-link" href="#introduction">Introduction</a></li>
-            <li><a class="nav-link" href="#data-types">Data Types</a></li>
-            <li><a class="nav-link" href="#variables">Variables</a></li>
-            <li><a class="nav-link" href="#functions">Functions</a></li>
+            <li><a class="target nav-link" href="#introduction">Introduction</a></li>
+            <li><a class="target nav-link" href="#data-types">Data Types</a></li>
+            <li><a class="target nav-link" href="#variables">Variables</a></li>
+            <li><a class="target nav-link" href="#functions">Functions</a></li>
         </ul>
 
         <select>
@@ -26,8 +26,8 @@
                 <option value="#variables">Variables</option>
                 <option value="#functions">Functions</option>
         </select>
-
        </nav>
+
     <main id="main-doc">
         <section id="introduction" class="main-section">
             <header>JavaScript Introduction</header>
@@ -89,7 +89,7 @@
 
 <!--User Stories-->
 
-
+<!--
 User Story #4: Each section element with the class of main-section 
 should also have an id that corresponds with the text of each header contained within it. 
 Any spaces should be replaced with underscores 
@@ -109,6 +109,4 @@ every element with the class main-section.
 
 User Story #14: On regular sized devices (laptops, desktops), 
 the element with id="navbar" should be shown on the left side of the 
-screen and should always be visible to the user.
-
-User Story #15: My Technical Documentation page should use at least one media query.
+screen and should always be visible to the user.-->
