added back in #product-section to have functioning link in nav to meet course requirements

--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -35,6 +35,7 @@
         </section>
 
     <!--Product Section-->
+    <section id="product-section">
     <div class="product-container">
         <!--Product 1-->
         <div class="product-text">
@@ -97,6 +98,7 @@
                 <button class="product-button-style2">Shop Skis</button>
         </div>
     </div>
+</section>
 
       <!--Video Section--> 
       <section class="video-style">
