--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -103,20 +103,21 @@
       <!--Video Section--> 
       <section class="video-style">
         <h2 id="video-section">Winter Traditions Start Here</h2>
-        <section class ="video-grid">
-          <div>
-            <iframe id="video"  src="https://www.youtube.com/embed/SuKn-acPvVk" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-            encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
-          </div>
-        <div>
-            <iframe id="video2"  src="https://www.youtube.com/embed/6m7PW7FS3cE" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; 
-            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
+        
+        <div class="video-container">
+            <div class="video-div1">
+                <iframe id="video"  src="https://www.youtube.com/embed/SuKn-acPvVk" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <div class="video-div2">
+                <iframe id="video2"  src="https://www.youtube.com/embed/6m7PW7FS3cE" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; 
+                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
         </div>
-        </section>
       </section>
 
         <!--Footer Section-->
