Styling changes to <!--Product Styles--> at @media max-width: 600px and 450px, edited spacing for <!--Video Section-->, added flex to <!--Footer Section-->

--- a/fcc_product_landing_page/index.html
+++ b/fcc_product_landing_page/index.html
@@ -106,13 +106,13 @@
         
         <div class="video-container">
             <div class="video-div1">
-                <iframe id="video"  src="https://www.youtube.com/embed/SuKn-acPvVk" 
+                <iframe width="878" height="494" id="video" src="https://www.youtube.com/embed/SuKn-acPvVk" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                 encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
             </div>
             <div class="video-div2">
-                <iframe id="video2"  src="https://www.youtube.com/embed/6m7PW7FS3cE" 
+                <iframe width="878" height="494" id="video2" src="https://www.youtube.com/embed/6m7PW7FS3cE" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; 
                 autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
@@ -135,5 +135,7 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
+
+
 
 
