Added styling to the code

--- a/fcc_technical_documentation_page/index.html
+++ b/fcc_technical_documentation_page/index.html
@@ -47,43 +47,43 @@
                         our program. 
                     </p>
 
-                    <p>In ES6, <code>let</code> and <code>const</code> are the preferred variable 
-                        keywords for many programmers. <code>var</code> is the pre-ES6 
+                    <p>In ES6, <code class="para-code">let</code> and <code class="para-code">const</code> are the preferred variable 
+                        keywords for many programmers. <code class="para-code">var</code> is the pre-ES6 
                         keyword for variable. 
                     </p>
 
-                    <p>Declaring a Variable Using <code>let</code></p>
+                    <p>Declaring a Variable Using <code class="para-code">let</code></p>
 
-                    <code>let myName = "Sara";</code>
+                    <code class="body-code">let myName = "Sara";</code>
 
                     <p>The above example can be broken down into its basic parts. 
                         <ul>
-                            <li><code>let</code> is a variable keyword. The JavaScript interpreter knows this
+                            <li><code class="para-code">let</code> is a variable keyword. The JavaScript interpreter knows this
                                 <strong>keyword</strong> is used to create a variable.</li>
-                            <li><code>myName</code> is the the variable name. In order to use a variable you must give it a name. 
+                            <li><code class="para-code">myName</code> is the the variable name. In order to use a variable you must give it a name. 
                                 This is sometimes called the <strong>identifier</strong>.</li>
-                            <li><code>=</code> is referred to as the assignment operator; this tells the 
+                            <li><code class="para-code">=</code> is referred to as the assignment operator; this tells the 
                                 interpreter that you are going to assign a value to the variable. It is 
                                 also used to update the value given to a variable.</li>
-                            <li><code>"Sara"</code> is the variable's value.</li>
+                            <li><code class="para-code">"Sara"</code> is the variable's value.</li>
                         </ul>  
                      </p>
 
-                    <p>Using <code>let</code>, signals to the program that the variable can be
+                    <p>Using <code class="para-code">let</code>, signals to the program that the variable can be
                     reassigned to a different variable.</p>
 
-                    <p>Declaring a Variable Using <code>const</code></p>
+                    <p>Declaring a Variable Using <code class="para-code">const</code></p>
 
-                    <code>const myName = "Sara";</code>
+                    <code class="body-code">const myName = "Sara";</code>
 
-                    <p><code>const</code> is short for <em>constant</em>. A variable assigned using 
+                    <p><code class="para-code">const</code> is short for <em>constant</em>. A variable assigned using 
                     <code>const</code> cannot be reassigned later in the program. If you try, the 
-                    program will throw a <code>TypeError</code>. Additionally, <code>const</code> variables 
+                    program will throw a <code class="para-code">TypeError</code>. Additionally, <code>const</code> variables 
                     must be assigned when they are declared or the program will throw a 
-                    <code>SyntaxError</code>.</p>
+                    <code class="para-code">SyntaxError</code>.</p>
 
                     <p>If you do not need to reassign a variable throughout the program, 
-                        use <code>const</code> otherwise, use <code>let</code>. 
+                        use <code class="para-code">const</code> otherwise, use <code>let</code>. 
                     </p>
                 </span>
         </section>
@@ -102,9 +102,9 @@
                         <li>String</li>
                         <li>Boolean</li>
                         <li><strong>Null:</strong> the intentional absence of a value represented by the 
-                            keyword <code>null</code> 
+                            keyword <code class="para-code">null</code> 
                         </li>
-                        <li><strong>Undefined:</strong> denoted by the keyword <code>undefined</code> (without quotes)
+                        <li><strong>Undefined:</strong> denoted by the keyword <code class="para-code">undefined</code> (without quotes)
                         and represents the absence of a value</li>
                     </ul>
                     <li><strong>Object:</strong> collections of related data</li>
@@ -133,12 +133,12 @@
                     </p>
 
                     <p>Array Literal Syntax</p>
-                        <code>['element example', 10, true]</code>
+                        <code class="body-code">['element example', 10, true]</code>
 
                     <p>The above example can be broken down into its basic parts.
                         <ul>
                             <li>The array is represented by the square brackets 
-                                <code>[]</code> and the content inside
+                                <code class="para-code">[]</code> and the content inside
                             </li>
                             <li>Each content item instide an array is called an <strong>element</strong></li>
                             <li>There are three elements inside this example array</li>
@@ -158,12 +158,12 @@
                         to organize a program into distinct units, making interchanging and editing 
                         them easier. This makes the entire programs organized and modular. 
                     </p>
-                    <p>A JavaScript function is defined with the <code>function</code> 
-                    keyword followed by a <code>name</code>, followed by parentheses. The code to 
+                    <p>A JavaScript function is defined with the <code class="para-code">function</code> 
+                    keyword followed by a <code class="para-code">name</code>, followed by parentheses. The code to 
                     be executed by the function is placed insided curly braces.</p>
 
                     <p>Function Declaration Syntax</p>
-                    <code>
+                    <code class="body-code">
                         function greetWorld() {
                             console.log('Hello, World!'); 
                         }
@@ -171,13 +171,13 @@
 
                 <p>The above example can be broken down into its basic parts. 
                 <ul>
-                    <li><code>function</code> is the function keyword that allows us 
+                    <li><code class="para-code">function</code> is the function keyword that allows us 
                     to <em>declare</em> a function</li>
 
-                    <li><code>greetWorld()</code> is the function name. This is also called an 
+                    <li><code class="para-code">greetWorld()</code> is the function name. This is also called an 
                     <strong>identifier</strong></li>
                 
-                    <li><code>{console.log('Hello, World!');}</code> is the 
+                    <li><code class="para-code">{console.log('Hello, World!');}</code> is the 
                     function's statements, or the code to be executed</li>
                 </ul>
                 </p>
@@ -188,7 +188,7 @@
                 </p>
 
                 <P>Calling a Function Syntax</P>
-                    <code>greetWorld(); // prints 'Hello, World!'</code>
+                    <code class="body-code">greetWorld(); // prints 'Hello, World!'</code>
 
                 <p>In order to call a function in code, type the function name followed by 
                     parentheses. This function call executes the function body, or all of the 
